# test-copier-uv

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report---.md  feature-request---.md
.github/workflows/: check.yml  ci.yml  docs.yml
docs/api/: hello.md
src/test_copier_uv/: hello.py
src/test_uv/: hello.py
tests/: test_hello.py
